--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ fhe = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" 
 fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
 fhe-util = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
 rand = "0.8.5"
+rayon = "1.10.0"
