--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-b
 fhe-util = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
 rand = "0.8.5"
 rayon = "1.10.0"
+stopwatch = "0.0.7"
