--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,11 @@
-[package]
-name = "fhe-workshop"
-version = "0.1.0"
-edition = "2021"
-description = ": A practical introduction to FHE for software developers"
-repository = "https://github.com/gnosisguild/fhe-workshop"
-license = "MIT OR Apache-2.0"
+[workspace]
+resolver = "2"
+members = ["host", "methods"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+# Always optimize; building and running the guest takes much longer without optimization.
+[profile.dev]
+opt-level = 3
 
-[dependencies]
-fhe = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
-fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
-fhe-util = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
-indicatif = "0.17.8"
-rand = "0.8.5"
-rayon = "1.10.0"
-stopwatch = "0.0.7"
+[profile.release]
+debug = 1
+lto = true
