--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -14,3 +14,4 @@ fhe-util = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-bet
 indicatif = "0.17.8"
 rand = "0.8.5"
 rayon = "1.10.0"
+clap = {version = "4.5.14", features = ["derive"]}
